# speed-limit-yolo

./: CMakeLists.txt  speed-limit-yolo.pro
cfg/: CMakeLists.txt  openimages.data  saferauto.data
data/: CMakeLists.txt
src/: CMakeLists.txt  image.c  image.h  main.c  ocr.c  ocr.h  utils.c  utils.h  video.c  video.h
